--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,40 @@
-# Xcode
-## User settings
+# MARK: - Xcode & macOS
+.DS_Store
+*.xcuserstate
+*.xcworkspace
+*.xcodeproj/project.xcworkspace/xcuserdata/
 xcuserdata/
-APIKeys.swift
 
-## Obj-C/Swift specific
+# MARK: - Swift / iOS
 *.hmap
-
-## App packaging
 *.ipa
 *.dSYM.zip
 *.dSYM
+*.plist
+APIKeys.swift
+GoogleService-Info.plist
+DerivedData/
+build/
+Pods/
 
-# Compiled source #
-###################
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
+# MARK: - Firebase / Secrets
+*.env
+*.key
+*.pem
+*.crt
 
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
+# MARK: - Logs & Datenbanken
+*.log
+*.sql
+*.sqlite
+
+# MARK: - Systemdateien
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# MARK: - Archivformate / Binär
 *.7z
 *.dmg
 *.gz
@@ -33,20 +44,6 @@ APIKeys.swift
 *.tar
 *.zip
 
-# Logs and databases #
-######################
-*.log
-*.sql
-*.sqlite
-
-# OS generated files #
-######################
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-Pods/
+# MARK: - Sonstiges
+.gitignore
+Phinder/Phinder/GoogleService-Info.plist
